bare-templates/ingress/api-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nba-api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-regex: ^https://api.biodiversitydata.nl/v0(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://api.biodiversitydata.nl/
spec:
  rules:
  - host: "api.biodiversitydata.nl"
    http:
      paths:
      - path: /
        backend:
          serviceName: nba-landing
          servicePort: 80
      - path: /v2
        backend:
          serviceName: nba-api
          servicePort: 8080
      - path: /scratchpad
        backend:
          serviceName: nba-scratchpad
          servicePort: 80
