bare-templates/ingress/docs-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nba-docs-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-regex: ^https://www.biodiversitydata.nl/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://docs.biodiversitydata.nl/$1
spec:
  rules:
  - host: "docs.biodiversitydata.nl"
    http:
      paths:
      - path: /en/latest
        backend:
          serviceName: nba-docs
          servicePort: 80
      - path: /endpoints-reference
        backend:
          serviceName: nba-docs-swagger
          servicePort: 80

  - host: "www.biodiversitydata.nl"
    http:
      paths:
      - path: /en/latest
        backend:
          serviceName: nba-docs
          servicePort: 80
