bare-templates/ingress/purl-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nba-purl-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "data.biodiversitydata.nl"
    http:
      paths:
      - backend:
          serviceName: nba-purl
          servicePort: 8080
